fix(footer): update footer subcomponent spacing

--- a/packages/web-components/src/components/footer/footer.scss
+++ b/packages/web-components/src/components/footer/footer.scss
@@ -90,7 +90,7 @@
 :host(#{$dds-prefix}-footer-nav),
 :host(#{$dds-prefix}-legal-nav) {
   &:not([size='micro']) {
-    margin-top: $carbon--spacing-07;
+    margin-top: $carbon--spacing-09;
   }
 }
 
